--- a/public/index.html
+++ b/public/index.html
@@ -130,12 +130,8 @@
                             </div>
                             <div class="input-group">
                                 <label class="input-label">Weight (kg):</label>
-                                <select name="weight" class="input-field">
-                                    <option value="0.5">0.5 kg</option>
-                                    <option value="2.5" selected>2.5 kg</option>
-                                    <option value="5.0">5.0 kg</option>
-                                    <option value="10.0">10.0 kg</option>
-                                </select>
+                                <input type="number" step="0.1" name="weight" id="wizard-weight" class="input-field"
+                                    value="2.5">
                             </div>
                             <div style="margin-top: 2rem; display: flex; justify-content: flex-end;">
                                 <button type="button" class="btn-primary" id="btn-next-step-1">Next <i
@@ -173,25 +169,15 @@
                         <div class="form-card" style="padding: 2rem;">
                             <div class="input-group">
                                 <label class="input-label">Length (cm):</label>
-                                <select name="length" id="box-length" class="input-field">
-                                    <option value="10">10 cm</option>
-                                    <option value="30">30 cm</option>
-                                    <option value="75" selected>75 cm</option>
-                                </select>
+                                <input type="number" name="length" id="box-length" class="input-field" value="75">
                             </div>
                             <div class="input-group">
                                 <label class="input-label">Width (cm):</label>
-                                <select name="width" id="box-width" class="input-field">
-                                    <option value="10">10 cm</option>
-                                    <option value="35" selected>35 cm</option>
-                                </select>
+                                <input type="number" name="width" id="box-width" class="input-field" value="35">
                             </div>
                             <div class="input-group">
                                 <label class="input-label">Height (cm):</label>
-                                <select name="height" id="box-height" class="input-field">
-                                    <option value="10">10 cm</option>
-                                    <option value="35" selected>35 cm</option>
-                                </select>
+                                <input type="number" name="height" id="box-height" class="input-field" value="35">
                             </div>
                             <div style="margin-top: 1.5rem;">
                                 <div
@@ -511,20 +497,95 @@
                                     <option value="DSVAirExpress">DSV Air Express</option>
                                     <option value="DSVParcels">DSV Parcels</option>
                                     <option value="DSVEconomy">DSV Economy</option>
+                                    <option value="DSVAirExpressImport">DSV Air Express Import</option>
                                 </select>
                             </div>
                         </div>
 
                         <div class="form-row">
                             <div class="input-group">
-                                <label class="input-label">Origin Country (ISO)</label>
+                                <label class="input-label">Package Type</label>
+                                <select name="packageType" class="input-field">
+                                    <option value="PARCELS">Parcels</option>
+                                    <option value="DOCUMENT">Document</option>
+                                    <option value="ENVELOPE">Envelope</option>
+                                </select>
+                            </div>
+                            <div class="input-group">
+                                <label class="input-label">Weight (KG)</label>
+                                <input type="number" step="0.1" name="weight" class="input-field" value="2.5" required>
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="input-group">
+                                <label class="input-label">Dimensions (L x W x H cm)</label>
+                                <div style="display: flex; gap: 0.5rem;">
+                                    <input type="number" name="length" class="input-field" placeholder="L" value="10">
+                                    <input type="number" name="width" class="input-field" placeholder="W" value="10">
+                                    <input type="number" name="height" class="input-field" placeholder="H" value="10">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="input-group">
+                                <label class="input-label">Commodity Description</label>
+                                <input type="text" name="commodity" class="input-field" value="Industrial Parts"
+                                    placeholder="e.g. Industrial Parts">
+                            </div>
+                            <div class="input-group">
+                                <label class="input-label">Goods Value & Currency</label>
+                                <div style="display: flex; gap: 0.5rem;">
+                                    <input type="number" name="goodsValue" class="input-field" value="100"
+                                        placeholder="Value">
+                                    <select name="currencyCode" class="input-field" style="width: 100px;">
+                                        <option value="CHF">CHF</option>
+                                        <option value="EUR">EUR</option>
+                                        <option value="USD">USD</option>
+                                        <option value="GBP">GBP</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h3 style="margin-top: 1.5rem;">Sender / Pickup Information</h3>
+                        <div class="form-row">
+                            <div class="input-group">
+                                <label class="input-label">Company Name</label>
+                                <input type="text" name="origin_company" class="input-field" value="BCIC Swiss GmbH"
+                                    placeholder="e.g. BCIC Swiss GmbH">
+                            </div>
+                            <div class="input-group">
+                                <label class="input-label">Address</label>
+                                <input type="text" name="origin_address" class="input-field" value="Lättichstrasse 6"
+                                    placeholder="e.g. Lättichstrasse 6">
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="input-group">
+                                <label class="input-label">City</label>
+                                <input type="text" name="origin_city" class="input-field" value="Baar"
+                                    placeholder="e.g. Baar">
+                            </div>
+                            <div class="input-group">
+                                <label class="input-label">Zip Code</label>
+                                <input type="text" name="origin_zip" class="input-field" value="6340"
+                                    placeholder="e.g. 6340">
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="input-group">
+                                <label class="input-label">Country (ISO)</label>
                                 <input type="text" name="origin_country" class="input-field" value="CH"
                                     placeholder="e.g. CH">
                             </div>
                             <div class="input-group">
-                                <label class="input-label">Commodity</label>
-                                <input type="text" name="commodity" class="input-field" value="Industrial Parts"
-                                    placeholder="e.g. Industrial Parts">
+                                <label class="input-label">Phone</label>
+                                <input type="text" name="origin_phone" class="input-field" value="+41 786195928"
+                                    placeholder="e.g. +41 786195928">
                             </div>
                         </div>
 
